--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; URL=/templates/index.html" charset="UTF-8"/>
+    <meta http-equiv="refresh" content="0; URL=/templates/base.html" charset="UTF-8"/>
     <title>Title</title>
 </head>
 <body>
